assets/stylesheets/redproject.css
/* ... */
.wrapper > * {
    -webkit-flex: 1 100%;
	flex: 1 100%;
}

.main {
	text-align: left;
}

.aside {
    -webkit-flex: 0 0 auto;
    flex: 0 0 auto;
}

@media all and (max-width: 749px) {

    .actions-menu {
        padding-left: 0em;
    }
    .custom-dropdown-menu {
        width: calc(100vw - 10px);
    }

    .compact-table .single-element, .comfortable-table .single-element { height: auto; }
    .single-element{
        padding: 5px 0;
        border-bottom: 2px solid #F5F5F5;
    }
    .aside {
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .main{
        max-height: 60px;
        overflow: hidden;
    }
    .wrapper .subject {
		 -webkit-order: 2;
		 order: 2;
		 -webkit-flex: 1;
		 flex: 1;
		 text-overflow: ellipsis;
		 white-space: nowrap;
	 }
	.issue-subject { font-size: 1.45em; }
    .wrapper .last-talk {
        -webkit-flex: 1 0 100%;
        flex: 1 0 100%;
        -webkit-order: 10;
        order: 10;
        margin-left: 2.5em;
        text-overflow: ellipsis;
        white-space: nowrap;
        line-height: 1.3;
		overflow: hidden;
    }
    .wrapper .note-count {
        -webkit-order: 23;
        order: 23;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .wrapper .note-count .at-least-one {
        display: none;
    }
    .wrapper .note-count .zero {
        display: inline;
    }
    .aside-watched{
        -webkit-order: 24;
        order: 24;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .aside.updated_at {
        /* display: none; */
        -webkit-order: 3;
        order: 3;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .aside.tracker{
        -webkit-order: 1;
        order: 1;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
        margin-top: 7px;
    }
    .aside.issue_id{
        -webkit-order: 20;
        order: 20;
        margin-left: 2.5em;
    }
    .aside-priority {
        -webkit-order: 9;
        order: 9;
        padding-left: 5px;
    }
    .aside.project {
        -webkit-order: 21;
        order: 21;
        width: auto;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .aside-assignation {
        -webkit-order: 22;
        order: 22;
    }
    #notifications {display: none;}
    .action-perm {display: none;}
}
/* ... */

